@@ -43,17 +43,8 @@ import java.io.IOException;
 
 public interface PasswordProtectedEntry
 {
-
-  // Constant.
-  // ------------------------------------------------------------------------
-
-  /**
-   * The iteration count for password-based KDFs.
-   */
-  Integer ITERATION_COUNT = new Integer(1000);
-
-  // Method.
-  // ------------------------------------------------------------------------
+  /** The iteration count for password-based KDFs. */
+  Integer ITERATION_COUNT = Integer.valueOf(1000);
 
   /**
    * Encodes this entry, protected by a password.
